# emem

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  TERMS.md  glama.json  index.html  llms-install.md  package-lock.json  package.json  registry_claude.md  server.json  tsconfig.server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
:memory:/geocoder.sled/: db  snap.0000000000000188
claude-skills/: README.md
claude-skills/emem-find-similar/: SKILL.md
claude-skills/emem-locate-and-recall/: SKILL.md
claude-skills/emem-recall-polygon/: SKILL.md
claude-skills/emem-verify-receipt/: SKILL.md  verify.py
crates/emem-api-rest/: Cargo.toml  build.rs
crates/emem-api-rest/src/: ask_foundation.rs  clay_chip.rs  galileo_chip.rs  gpu_sidecar.rs  jepa_v2.rs  lib.rs  physics.rs  prithvi_chip.rs  topic_router.rs
crates/emem-attest/: Cargo.toml
crates/emem-attest/src/: lib.rs
crates/emem-cache/: Cargo.toml
crates/emem-cache/src/: lib.rs  sled_hot.rs
crates/emem-claim/: Cargo.toml
crates/emem-claim/src/: lib.rs
crates/emem-cli/: Cargo.toml
crates/emem-cli/src/: main.rs
crates/emem-codec/: Cargo.toml
crates/emem-codec/src/: alphabet.rs  cell64.rs  cid64.rs  geo.rs  hilbert.rs  lib.rs  tslot_text.rs  vec64.rs
crates/emem-core/: Cargo.toml
crates/emem-core/data/: algorithms-v0.json  bands-v0.json  climate_archetype_centroids_v1.json  functions-v0.json  schema-v0.json  sources-v0.json  topics-v0.json
crates/emem-core/src/: algorithms.rs  bands.rs  bbox.rs  cell.rs  error.rs  functions.rs  key.rs  lib.rs  manifest.rs  polygon.rs  privacy.rs  schema.rs  sources.rs  taxonomy.rs  topics.rs  tslot.rs
crates/emem-cubes/: Cargo.toml
crates/emem-cubes/src/: lib.rs
crates/emem-fact/: Cargo.toml
crates/emem-fact/src/: attest.rs  cbor.rs  cid.rs  fact.rs  lib.rs  receipt.rs
crates/emem-fact/tests/: round_trip.rs
crates/emem-fetch/: Cargo.toml
crates/emem-fetch/src/: cache_window.rs  chirps.rs  cog.rs  connectors.rs  dmsp_ols.rs  esa_cci_biomass.rs  firms.rs  ftw.rs  geonames.rs  gmrt.rs  hansen_gfc.rs  jrc_gfc2020.rs  jrc_tmf.rs  koppen.rs  lib.rs  overture.rs  proj.rs  radd_alerts.rs  stac.rs  template.rs  terraclimate.rs  wdpa.rs  worldpop.rs  wri_gdm_drivers.rs
crates/emem-fetch/tests/: live_cog_fetch.rs
crates/emem-intent/: Cargo.toml
crates/emem-intent/src/: lib.rs
crates/emem-mcp/: Cargo.toml
crates/emem-mcp/src/: lib.rs
crates/emem-primitives/: Cargo.toml
crates/emem-primitives/src/: binary_embedding.rs  cbor_ops.rs  compare.rs  compare_bands.rs  diff.rs  find_similar.rs  lib.rs  query_region.rs  recall.rs  refinement.rs  trajectory.rs  verify.rs
crates/emem-storage/: Cargo.toml
crates/emem-storage/src/: attesters.rs  lib.rs  merkle_log.rs  server.rs
docs/: AGENTS.md  AGENT_TRIAL.md  ATTESTING.md  CLIENTS.md  CONTRIBUTORS.md  DEPLOY.md  EVAL_2026_05_04.md  EVAL_DEEPSCAN_2026_05_05.md  GLOBAL_TRIAL.md  GO_LIVE.md  MATERIALIZERS.md  MILESTONE_v0.0.4.md  MULTIMODAL.md  PHYSICS_ENDPOINTS_2026_05_04.md  PROPOSAL_v2.archive.md  PUBLISHING.md  SPACES.md  SPEC.md  SUMMARY.md  TEMPORAL.md  WHITEPAPER.md  agents.md  architecture.md  book.toml  data-sources.md  developing.md  errors.md  inference.md  integrations.md  intro.md  mcp-directory.md  operating.md  product-memory.md  protocol.md  quickstart.md  registries.md  self-host.md  whitepaper.md
docs/developers/: architecture.md  data-sources.md  developing.md  inference.md
docs/diagrams/: index.html
docs/operators/: deprecations.md  operating.md
docs/registries/: PR-modelcontextprotocol-servers.md  awesome-mcp-servers-emem.patch
docs/theme/: emem-home.js  emem.css
examples/: agent-walkthroughs.md  claude-code.mcp.json  claude-desktop.json  cline.mcp.json  cursor.mcp.json  gemini-extension.json  hunt-use-cases.md  langchain.py  llamaindex.py  openai-gpt-action.json
examples/agno/: README.md  emem_mcp_geospatial_agent.py
examples/autogen/: README.md  emem_mcp_geospatial_agent.py
examples/crewai/: README.md  emem_mcp_geospatial_agent.py  emem_mcp_geospatial_crew.py
examples/langchain/: README.md  emem_mcp_geospatial_agent.py
examples/llamaindex/: README.md  emem_mcp_geospatial_agent.py
examples/mastra/: README.md  emem-mcp-geospatial-agent.ts  emem_mcp_geospatial_agent.ts  package.json
examples/pydantic-ai/: README.md  emem_mcp_geospatial_agent.py
huggingface-space/: Dockerfile  README.md
integrations/chatgpt/: README.md  app.md  chatgpt-app-submission.json  privacy.md  submission.md  tools.md
ops/systemd/: emem-server.service.example  journald-30day-retention.conf
python/jepa_v2/: README.md  assemble_data.py  export_baseline.py  train.py
python/jepa_v2_sidecar/: README.md  bootstrap_clay.py  bootstrap_models.py  emem-jepa-sidecar.service  requirements.txt  server.py
scripts/: global_trial.py  install-topic-model.sh  redeploy.sh
scripts/eval/: questions.json  run_eval.py
sdks/emem-py/: README.md  pyproject.toml
sdks/emem-py/examples/: recall.py
sdks/emem-py/src/emem/: __init__.py  client.py
sdks/emem-ts/: README.md  package.json  tsconfig.json
server/: index.ts
spec/test_vectors/: README.md
src/: App.tsx  main.tsx  styles.css
src/lib/: agent.ts  bands.ts  gazetteer.ts  geotessera.ts
tests/: bands.test.ts  geotessera.test.ts  providers.test.ts
tests/comprehensive/: analyze_climate_concerns.py  questions_v2.json  run_tests.py
tools/: daily-delta.sh  measure_alphabet.py  weekly-digest.sh
web/: 404.html  agent.json  ai-plugin.json  api-redoc.html  demos-ask-the-earth.html  demos-find-similar.html  demos-index.html  demos-recall-polygon.html  demos-signed-answer.html  demos-state-cube.html  demos-trajectory.html  gallery.html  humans-llms.txt  humans.html  humans.json  index.html  indexnow.txt  llms-full.txt  llms.txt  robots.txt  sitemap.xml  skills.md  verify.html
(+23 files in other folders)
