[workspace]
resolver = "2"
members = [
    "crates/emem-core",
    "crates/emem-codec",
    "crates/emem-fact",
    "crates/emem-claim",
    "crates/emem-cache",
    "crates/emem-fetch",
    "crates/emem-storage",
    "crates/emem-cubes",
    "crates/emem-primitives",
    "crates/emem-attest",
    "crates/emem-intent",
    "crates/emem-mcp",
    "crates/emem-api-rest",
    "crates/emem-cli",
]

[workspace.package]
version = "0.0.4"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/Vortx-AI/emem"
authors = ["Vortx-AI"]
description = "emem — agent-native, content-addressed, lazy-materialization spatial memory protocol"

[workspace.dependencies]
emem-core       = { path = "crates/emem-core",       version = "0.0.4" }
emem-codec      = { path = "crates/emem-codec",      version = "0.0.4" }
emem-fact       = { path = "crates/emem-fact",       version = "0.0.4" }
emem-claim      = { path = "crates/emem-claim",      version = "0.0.4" }
emem-cache      = { path = "crates/emem-cache",      version = "0.0.4" }
emem-fetch      = { path = "crates/emem-fetch",      version = "0.0.4" }
emem-storage    = { path = "crates/emem-storage",    version = "0.0.4" }
emem-cubes      = { path = "crates/emem-cubes",      version = "0.0.4" }
emem-primitives = { path = "crates/emem-primitives", version = "0.0.4" }
emem-attest     = { path = "crates/emem-attest",     version = "0.0.4" }
emem-intent     = { path = "crates/emem-intent",     version = "0.0.4" }
emem-mcp        = { path = "crates/emem-mcp",        version = "0.0.4" }
emem-api-rest   = { path = "crates/emem-api-rest",   version = "0.0.4" }

# crypto
blake3        = "1.5"
ed25519-dalek = "2.1"
rand          = "0.8"

# serialization
ciborium = "0.2"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
data-encoding = "2.5"

# storage
sled    = "0.34"
parquet = "55"
arrow   = "55"
object_store = { version = "0.12", features = ["aws"] }

# async / net
async-trait = "0.1"
tokio       = { version = "1", features = ["full"] }
axum        = "0.7"
tower       = "0.5"
tower-http  = { version = "0.6", features = ["limit", "timeout", "trace", "set-header", "request-id", "compression-gzip"] }
utoipa      = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = "8"
reqwest     = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }

# TLS termination (open-source: rustls + Let's Encrypt via TLS-ALPN-01)
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls      = "0.23"
rustls-acme = { version = "0.13", features = ["axum"] }
tokio-stream = "0.1"
futures-util = "0.3"

# compression (used by the pure-Rust COG range reader for Sentinel-2 / -1 tiles)
flate2 = "1"

# misc
ulid     = "1"
thiserror = "1"
anyhow   = "1"
tracing  = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap     = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.bench]
debug = true
