[package]
name = "emem-api-rest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP surface for emem agents and humans (REST + MCP JSON-RPC + OpenAPI)"

[dependencies]
emem-core       = { workspace = true }
emem-fact       = { workspace = true }
emem-attest     = { workspace = true }
emem-claim      = { workspace = true }
emem-cache      = { workspace = true }
emem-storage    = { workspace = true }
emem-primitives = { workspace = true }
emem-intent     = { workspace = true }
emem-mcp        = { workspace = true }
emem-fetch      = { workspace = true }
axum            = { workspace = true }
tower           = { workspace = true }
tower-http      = { workspace = true }
tokio           = { workspace = true }
reqwest         = { workspace = true }
emem-codec      = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
data-encoding   = { workspace = true }
ciborium        = { workspace = true }
ed25519-dalek   = { workspace = true }
blake3          = { workspace = true }
tracing         = { workspace = true }
sled            = { workspace = true }
# PNG encoder for the multimodal RGB-scene tool
# (/v1/cells/{cell64}/scene.png + emem_cell_scene_rgb MCP).
png             = "0.17"
# Sentence embedder for the topic router (`/v1/ask` semantic dispatch,
# replaces the hardcoded TOPIC_KEYWORDS / TOPIC_BANDS / TOPIC_ALGORITHMS
# tables shipped through 0.0.2).
#
# Two backends, switchable at runtime via `EMEM_TOPIC_BACKEND`:
#
#   1. `ort` (default) — direct `ort` 2.x + `tokenizers` BERT-style
#      embedder, no fastembed-rs wrapper. Loads ONNX + tokenizer.json
#      from a local directory (`EMEM_TOPIC_MODEL_DIR`, default
#      `<EMEM_DATA>/models/bge-base-en-v1.5`). Defaults to
#      `BAAI/bge-base-en-v1.5` (110 M params, 768-D, MTEB ~63) but any
#      BERT/Roberta-family ONNX with input names
#      `input_ids`/`attention_mask`/`token_type_ids` and a
#      `last_hidden_state` output works. Pooling = CLS; output is
#      L2-normalised. Microsoft's bundled CPU ORT (via the
#      `download-binaries` feature) loads in ~1.2 s and runs the
#      25-topic centroid pass in ~50 ms total — the CUDA build at
#      /opt/onnxruntime-1.22.0-cuda12 deadlocks on session create on
#      this host (verified with isolated /tmp/orttest), so we don't
#      use it. GPU re-enable goes through a known-good cuda dylib.
#
#   2. `model2vec` (fallback) — static-distillation token-lookup
#      embedder, `minishlab/potion-base-8M`, 256-D, ~32 MB, sub-µs
#      inference, pure Rust. Used in air-gapped / no-ORT deployments
#      and as the unit-test backend. `fancy-regex` keeps the build
#      pure Rust (avoids the libonig C dep).
ort             = { version = "=2.0.0-rc.12", default-features = false, features = ["ndarray", "std", "api-24", "download-binaries", "tls-rustls"] }
ort-ndarray     = { package = "ndarray", version = "0.17" }
tokenizers      = { version = "0.22", default-features = false, features = ["onig"] }
model2vec-rs    = { version = "0.1", default-features = false, features = ["fancy-regex"] }
