[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "emem"
version = "0.0.4"
description = "Python client for emem.dev — agent-native Earth memory protocol"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Vortx AI Private Limited", email = "avijeet@vortx.ai" },
]
keywords = [
    "earth-observation",
    "geospatial",
    "satellite",
    "mcp",
    "ed25519",
    "content-addressed",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://emem.dev"
Repository = "https://github.com/Vortx-AI/emem"
Documentation = "https://emem.dev/agents.md"
Issues = "https://github.com/Vortx-AI/emem/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/emem"]

[tool.hatch.build.targets.sdist]
include = ["src/emem", "README.md", "LICENSE"]
